--- a/contribute.html
+++ b/contribute.html
@@ -45,6 +45,7 @@
         <br>
         <p>Themes:</p> <input class="themesInput" type="text" placeholder="Heroism, Nobility" id="themes">
         <br>
+        <p>Page: </p> <input class="themesInput" type="Text" placeholder="10" id="page">
 
         <input type="button" value="Send" id="sendStuff">
     </section>
