--- a/index.html
+++ b/index.html
@@ -48,8 +48,6 @@
                     <p>Made by Moses and Keyser</p>
                 </div>
 
-
-
                 <div class="location">
                     <!-- <img class="imgThing" :src="timeline[indexV].img"> -->
 
@@ -82,6 +80,8 @@
     </div>
     <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-storage.js"></script>
+
     <script src="main.js"></script>
 
 
